# Diffy

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: lib.rs  main.rs
src/cli/: mod.rs  tui.rs
src/core/: diff.rs  mod.rs  tree.rs  types.rs
src/web/: mod.rs  server.rs
test_dirs/left/: file1.txt  file2.txt
test_dirs/left/src/components/: Button.tsx
test_dirs/left/src/utils/: helpers.ts
test_dirs/right/: file1.txt
test_dirs/right/src/components/: Button.tsx
test_dirs/right/src/services/: api.ts
